--- a/src/style/a.scss
+++ b/src/style/a.scss
@@ -2,4 +2,6 @@ $bgColor:#c09;
 .box{
     background-color:$bgColor;
     font-size:30px;
+    display:flex;
+    background:url('../assets/img/nothing.png');
 }
